@@ -1,5 +1,5 @@
 /***************************************************************************
- *  $Id: itsArgument.cpp,v 1.17 2006/05/13 10:05:54 nojhan Exp $
+ *  $Id: itsArgument.cpp,v 1.18 2006/05/15 11:44:52 nojhan Exp $
  *  Copyright : Free Software Foundation
  *  Author : Johann Dréo <nojhan@gmail.com>
  *  Author : Jean-Philippe Aumasson <jeanphilippe.aumasson@gmail.com>
@@ -26,8 +26,12 @@
 
 #include "itsArgument.hpp"
 
-#define FLAG_SHORT_MARK "-"
-#define FLAG_LONG_MARK "--"
+//#define FLAG_SHORT_MARK "-"
+//#define FLAG_LONG_MARK "--"
+
+const string FLAG_SHORT_MARK "-"
+const string FLAG_LONG_MARK "--"
+
 
 using namespace std;
 
